# VGALightStripDetection

./: .gitignore  VGALightStripDetection.sln
Camera FPS/: Camera FPS.aps  Camera FPS.rc  Camera FPS.vcxproj  Camera FPS.vcxproj.filters  main.cpp  resource.h
VGALightStripDetection/: 3c.ini  3c.json  Aging-NVflash.bat  Aging.bat  AgingLog.cpp  AgingLog.h  CMakeLists.txt  CaptureDevices.cpp  CaptureDevices.h  CommonColor.cpp  CommonColor.h  ConfigData.cpp  ConfigData.h  ErrorCode.cpp  ErrorCode.h  I2CWrap.cpp  I2CWrap.h  Minefield.cpp  Minefield.h  PreDefine.cpp  PreDefine.h  RandomLitoff.cpp  RandomLitoff.h  Readme.txt  SpdMultipleSinks.cpp  SpdMultipleSinks.h  VGALightStripDetection.vcxproj  VGALightStripDetection.vcxproj.filters  VideoCard.cpp  VideoCard.h  ene_program.cpp  ene_program.h  main.cpp  main.h  main2.cpp  main3.cpp  main_test.cpp  nvapi.h  nvapi64.lib  nvbase.cpp  (+6 more)
VGALightStripDetection/GetVGAINFO/: IOMap.sys  IOMap64.sys
VGALightStripDetection/NVFlash 5.670/Windows64/: ppid.txt
VGALightStripDetection/VGAINFO_V2.1.1.2/Win7/: IOMap.sys  IOMap64.sys
VGALightStripDetection/doc/: LED灯带检测专案总结.pptx
VGALightStripDetection/testbat/: Aging-A1.bat  Aging-A2.bat  Aging-N2.bat  Aging.bat  buglist.xlsx
VGALightStripDetection/tool/: amd-led  amd-led.sh  give-me-device-permissions.sh  ldd.sh  nv-led  nv-led.sh
VGALightStripDetection/tool/i2c-tools/: i2cdetect  i2cdump  i2cget  i2cset  i2ctransfer
